--- a/index.html
+++ b/index.html
@@ -62,33 +62,33 @@
 
                 <div class="col-divs">
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic02.jpg"></div>
+                        <div><img src="./images/pic02.jpg"></div>
                         <p>Ipsum Feugiat</p>
                     </div>
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic03.jpg"></div>
+                        <div><img src="./images/pic03.jpg"></div>
                         <p>Rhoncus Semper</p>
                     </div>
                 </div>
 
                 <div class="col-divs">
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic04.jpg"></div>
+                        <div><img src="./images/pic04.jpg"></div>
                         <p>Magna Nullam</p>
                     </div>
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic05.jpg"></div>
+                        <div><img src="./images/pic05.jpg"></div>
                         <p>Natoque Vitae</p>
                     </div>
                 </div>
 
                 <div class="col-divs">
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic06.jpg"></div>
+                        <div><img src="./images/pic06.jpg"></div>
                         <p>Dolor Penatibus</p>
                     </div>
                     <div class="each">
-                        <div><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic07.jpg"></div>
+                        <div><img src="./images/pic07.jpg"></div>
                         <p>Orci Convallis</p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="section-3" id="section3">
             <h1>About Me</h1>
-            <div class="img-div"><img src="https://pixelarity.com/items/demos/prologue/cyan/images/pic08.jpg"></div>
+            <div class="img-div"><img src="./images/pic08.jpg"></div>
             <p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus ultricies curae quis et rhoncus
                 velit. Lobortis elementum aliquet nec vitae laoreet eget cubilia quam non etiam odio tincidunt montes.
                 Elementum sem parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper dolor.
